--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -4,12 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -b",
+    "start": "node dist/index.js",
+    "dev": "npm run build && npm run start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@repo/typescript-config":"workspace:*"
+    "@repo/typescript-config": "workspace:*",
+    "@types/authenticator": "^1.1.4"
+  },
+  "dependencies": {
+    "@types/express": "^5.0.0",
+    "authenticator": "^1.1.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2"
   }
 }
