--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
-    "@types/authenticator": "^1.1.4"
+    "@types/authenticator": "^1.1.4",
+    "@types/jsonwebtoken": "^9.0.7"
   },
   "dependencies": {
     "@types/express": "^5.0.0",
     "authenticator": "^1.1.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
